# sinthia

./: .env  .gitignore  README.md  main.py  pyproject.toml
sinthia/core/: __init__.py  config.py
sinthia/core/logging/: __init__.py  config.json  mylogger.py
sinthia/services/transcription/: __init__.py  transcriber.py
tests/audio/transcription/: audio_test.py
tests/logging/: logging_test.py
