[project]
name = "sinthia"
version = "0.1.0"
description = "This is a Ai which helps you prepare for English Language Proficiency tests like IELTS, TOEFL, and Duolingo "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "parakeet-mlx>=0.3.3",
    "pytest>=8.4.1",
    "sounddevice>=0.5.2",
]
